feat: enhance AI model service with dynamic model configuration and scoring