@@ -1,5 +1,6 @@
 package com.no99.fusionmodel.service;
 
+import com.no99.fusionmodel.config.ModelConfig;
 import com.no99.fusionmodel.dto.*;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -14,38 +15,46 @@ public class AIModelService {
     @Value("${aigateway.baseurl}")
     private String baseUrl;
 
+    private final ModelConfig modelConfig;
     private final WebClient webClient;
 
-    public AIModelService() {
+    public AIModelService(ModelConfig modelConfig) {
+        this.modelConfig = modelConfig;
         this.webClient = WebClient.builder().build();
     }
 
     public ModelResult getBestResponse(List<ChatMessage> messages) {
         try {
-            // 并行调用doubao和qwen模型
-            CompletableFuture<String> doubaoFuture = callModel("doubao", messages);
-            CompletableFuture<String> qwenFuture = callModel("qwen", messages);
+            // 并行调用配置的模型
+            List<CompletableFuture<ModelResponse>> modelFutures = modelConfig.getGeneration().stream()
+                    .map(modelName -> callModelWithName(modelName, messages))
+                    .toList();
 
-            // 等待两个模型的响应
-            String doubaoResponse = doubaoFuture.get();
-            String qwenResponse = qwenFuture.get();
+            // 等待所有模型的响应
+            List<ModelResponse> responses = modelFutures.stream()
+                    .map(CompletableFuture::join)
+                    .toList();
 
-            // 使用deepseek评分
-            double doubaoScore = scoreResponse(doubaoResponse, messages);
-            double qwenScore = scoreResponse(qwenResponse, messages);
+            // 使用配置的评分模型对所有响应进行评分
+            ModelResult bestResult = null;
+            double bestScore = -1;
 
-            // 返回评分最高的结果
-            if (doubaoScore >= qwenScore) {
-                return new ModelResult("doubao", doubaoResponse, doubaoScore);
-            } else {
-                return new ModelResult("qwen", qwenResponse, qwenScore);
+            for (ModelResponse response : responses) {
+                double score = scoreResponse(response.content, messages);
+                if (score > bestScore) {
+                    bestScore = score;
+                    bestResult = new ModelResult(response.modelName, response.content, score);
+                }
             }
+
+            return bestResult != null ? bestResult :
+                new ModelResult("default", "No valid response received", 0.0);
         } catch (Exception e) {
             throw new RuntimeException("Error processing AI model requests", e);
         }
     }
 
-    private CompletableFuture<String> callModel(String modelName, List<ChatMessage> messages) {
+    private CompletableFuture<ModelResponse> callModelWithName(String modelName, List<ChatMessage> messages) {
         return CompletableFuture.supplyAsync(() -> {
             ChatRequest request = new ChatRequest(modelName, messages);
 
@@ -58,27 +67,42 @@ public class AIModelService {
                         .block();
 
                 if (response != null && response.getChoices() != null && !response.getChoices().isEmpty()) {
-                    return response.getChoices().get(0).getMessage().getContent();
+                    String content = response.getChoices().get(0).getMessage().getContent();
+                    return new ModelResponse(modelName, content);
                 }
-                return "No response from " + modelName;
+                return new ModelResponse(modelName, "No response from " + modelName);
             } catch (Exception e) {
-                throw new RuntimeException("Error calling " + modelName + " model", e);
+                return new ModelResponse(modelName, "Error calling " + modelName + " model: " + e.getMessage());
             }
         });
     }
 
-    private double scoreResponse(String response, List<ChatMessage> originalMessages) {
+    private static class ModelResponse {
+        final String modelName;
+        final String content;
+
+        ModelResponse(String modelName, String content) {
+            this.modelName = modelName;
+            this.content = content;
+        }
+    }
+
+    private double scoreResponse(String response, List<ChatMessage> messages) {
         try {
-            // 构造评分提示
-            String scorePrompt = """
-                请对以下回答进行评分（0-10分），只需要返回数字分数。
-                原始问题：%s
-                回答：%s
-                评分标准：准确性、有用性、清晰度。只返回分数，不要其他内容。
-                """.formatted(getLastUserMessage(originalMessages), response);
+            String context = messages.stream()
+                    .map(msg -> msg.getRole() + ": " + msg.getContent())
+                    .reduce("", (a, b) -> a + "\n" + b);
+
+            String scorePrompt = String.format(
+                    "请为以下回答的质量打分，分数在0-10之间，只返回数字。\n\n" +
+                    "对话上下文:\n%s\n\n" +
+                    "回答内容:\n%s\n\n" +
+                    "评分标准：准确性、相关性、完整性、清晰度。只返回分数数字。",
+                    context, response
+            );
 
             ChatMessage scoreMessage = new ChatMessage("user", scorePrompt);
-            ChatRequest scoreRequest = new ChatRequest("deepseek", List.of(scoreMessage));
+            ChatRequest scoreRequest = new ChatRequest(modelConfig.getScorer(), List.of(scoreMessage));
 
             ChatResponse scoreResponse = webClient.post()
                     .uri(baseUrl)
@@ -92,31 +116,20 @@ public class AIModelService {
                 try {
                     return Double.parseDouble(scoreText);
                 } catch (NumberFormatException e) {
-                    // 如果无法解析分数，尝试提取数字
+                    // 如果评分模型返回的不是数字，尝试提取数字
                     String[] parts = scoreText.split("\\s+");
                     for (String part : parts) {
                         try {
-                            double score = Double.parseDouble(part);
-                            if (score >= 0 && score <= 10) {
-                                return score;
-                            }
-                        } catch (NumberFormatException ignored) {}
+                            return Double.parseDouble(part);
+                        } catch (NumberFormatException ignored) {
+                        }
                     }
+                    return 5.0; // 默认分数
                 }
             }
             return 5.0; // 默认分数
         } catch (Exception e) {
             return 5.0; // 出错时返回默认分数
         }
-    }
-
-    private String getLastUserMessage(List<ChatMessage> messages) {
-        for (int i = messages.size() - 1; i >= 0; i--) {
-            ChatMessage message = messages.get(i);
-            if ("user".equals(message.getRole())) {
-                return message.getContent();
-            }
-        }
-        return "No user message found";
     }
 }
